[package]
name = "vrsc"
description = "a library for Verus types"
version = "0.0.1"
authors = ["jorian"]
edition = "2018"
keywords = ["crypto", "bitcoin", "verus"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.19.0", features = ["recovery"] }
bitcoin = "0.26.2"
bitcoin_hashes = "0.10"

[dependencies.serde]
version = "1"
